@@ -3,6 +3,8 @@ Cultibox (2.0.25) precise; urgency=low
     + Ajout du synoptique dans la page d'accueil
     + Ajout de l'import d'ue configuration dans cultipi
     + Ajout de la gestion des mots de passe pour l'interface
+    + Correction d'un bug de nettoyage du fichier index 
+    + Renforcemnt de la détection des capteurs
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Thu Jan 15 13:09:15 CEST 2014
 
